--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "vector-icons": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
